# aiodeta

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: push.yml  testing.yml
aiodeta/: __init__.py  client.py
tests/: conftest.py  test_base.py  test_deta.py
